--- a/css/personalsite.css
+++ b/css/personalsite.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Agency Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -14,7 +8,7 @@ body {
 }
 
 .text-primary {
-    color: #fed136;
+    color: #266BA0;
 }
 
 p {
@@ -35,14 +29,14 @@ a.active {
 }
 
 a {
-    color: #fed136;
+    color: #266BA0;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #fec503;
+    color: #8B4960;
 }
 
 h1,
@@ -69,12 +63,12 @@ h6 {
 }
 
 .btn-primary {
-    border-color: #fed136;
+    border-color: #266BA0;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
-    background-color: #fed136;
+    background-color: #266BA0;
 }
 
 .btn-primary:hover,
@@ -84,7 +78,7 @@ h6 {
 .open .dropdown-toggle.btn-primary {
     border-color: #f6bf01;
     color: #fff;
-    background-color: #fec503;
+    background-color: #8B4960;
 }
 
 .btn-primary:active,
@@ -108,25 +102,25 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #266BA0;
+    background-color: #266BA0;
 }
 
 .btn-primary .badge {
-    color: #fed136;
+    color: #266BA0;
     background-color: #fff;
 }
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #fed136;
+    border-color: #266BA0;
     border-radius: 3px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
     color: #fff;
-    background-color: #fed136;
+    background-color: #266BA0;
 }
 
 .btn-xl:hover,
@@ -136,7 +130,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-xl {
     border-color: #f6bf01;
     color: #fff;
-    background-color: #fec503;
+    background-color: #8B4960;
 }
 
 .btn-xl:active,
@@ -160,12 +154,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #266BA0;
+    background-color: #266BA0;
 }
 
 .btn-xl .badge {
-    color: #fed136;
+    color: #266BA0;
     background-color: #fff;
 }
 
@@ -175,15 +169,15 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #fed136;
+    font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,cursive;
+    color: #266BA0;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #fec503;
+    color: #8B4960;
 }
 
 .navbar-default .navbar-collapse {
@@ -191,8 +185,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #266BA0;
+    background-color: #266BA0;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -201,7 +195,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #fed136;
+    background-color: #266BA0;
 }
 
 .navbar-default .nav li a {
@@ -215,19 +209,19 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #fed136;
+    color: #266BA0;
 }
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
-    background-color: #fed136;
+    background-color: #266BA0;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
-    background-color: #fec503;
+    background-color: #8B4960;
 }
 
 @media(min-width:768px) {
@@ -265,7 +259,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/header-bg.jpg);
+    background-image: url(../img/lightsonahill.jpeg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
@@ -298,12 +292,12 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 275px;
         padding-bottom: 200px;
     }
 
     header .intro-text .intro-lead-in {
-        margin-bottom: 25px;
+        margin-bottom: 35px;
         font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 40px;
         font-style: italic;
@@ -320,13 +314,25 @@ header .intro-text .intro-heading {
     }
 }
 
+.sep {
+    background-attachment: fixed;
+    background-position: 0% 0;
+    background-repeat: round;
+/*    height: 450px;
+*/    position: relative;
+}
+.about {
+    background-image: url(../img/lightsonahill.jpeg);
+}
+
+
 section {
     padding: 100px 0;
 }
 
 section h2.section-heading {
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 75px;
     font-size: 40px;
 }
 
@@ -341,7 +347,7 @@ section h3.section-subheading {
 
 @media(min-width:768px) {
     section {
-        padding: 150px 0;
+        padding: 100px 0;
     }
 }
 
@@ -367,7 +373,7 @@ section h3.section-subheading {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(254,209,54,.9);
+    background: rgba(139,73,96,.9);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -493,7 +499,7 @@ section h3.section-subheading {
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #fed136;
+    background-color: #266BA0;
 }
 
 .timeline>li .timeline-image h4 {
@@ -680,7 +686,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-    border-color: #fed136;
+    border-color: #266BA0;
     box-shadow: none;
 }
 
@@ -719,6 +725,7 @@ section#contact .text-danger {
 footer {
     padding: 25px 0;
     text-align: center;
+    background-color: #f7f7f7;
 }
 
 footer span.copyright {
@@ -758,7 +765,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #fed136;
+    background-color: #266BA0;
 }
 
 .btn:focus,
@@ -841,12 +848,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #fed136;
+    background: #266BA0;
 }
 
 ::selection {
     text-shadow: none;
-    background: #fed136;
+    background: #266BA0;
 }
 
 img::selection {
@@ -858,5 +865,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: #fed136;
+    webkit-tap-highlight-color: #266BA0;
 }
